# coyote

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  worker.php
.github/workflows/: rust.yml
php/: Relay.php
src/: clap.rs  main.rs  opt.rs  worker.rs
src/ipc/: message.rs  mod.rs  unix.rs
src/worker/: linker.rs  mod.rs  pool.rs  worker.rs
src/worker/ipc/: message.rs  unix.rs
src/worker/pool/: mod.rs  static_.rs
src/worker/test_data/: echo_worker.php  sleepy_pid_worker.php
