[package]
name = "coyote"
version = "0.1.0"
authors = ["unexge <unexge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13"
tokio = { version = "0.2.0", features = ["full"] }
anyhow = "1.0.33"
structopt = "0.3.20"
log = "0.4.11"
env_logger = "0.8.1"
