[package]
name = "coyote"
version = "0.1.0"
authors = ["unexge <unexge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["net"] }
anyhow = "1.0.33"
structopt = "0.3.20"
log = "0.4.11"
env_logger = "0.8.1"
num-traits = "0.2"
num-derive = "0.3"
async-trait = "0.1.48"
futures = "0.3.13"
